@@ -1,5 +1,6 @@
 2010-03-16 MA Yue <velly.empire@gmail.com>
 
+    * Add functionality for hiding the SIZE columns in Nautilus list view.
     * Add functionality for changing default window manager, file manager and panel program 
     * Add functionality for changing menubar.
     * Add NScript: some useful Nautilus scripts
